src/styles.css
/* You can add global styles to this file, and also import other style files */
body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  zoom: 2.0;
}

body, app-root {
  overflow: visible;
}

html, body {
  height: 100%;
  margin: 0;
  display: flex;
  flex-direction: column;
}

app-root {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: 'Raleway', sans-serif;
}

